# nasm-lint

./: .gitignore  .semantic-release.yaml  CLAUDE.md  Cargo.toml  README.md  THIRD_PARTY_LICENSES  action.yml
.github/workflows/: ci.yml  dist.yml  release.yml
crates/nasmlint-cli/: Cargo.toml
crates/nasmlint-cli/src/: discover.rs  main.rs  render.rs
crates/nasmlint-core/: Cargo.toml
crates/nasmlint-core/src/: analysis.rs  ast.rs  cfg.rs  config.rs  diagnostics.rs  engine.rs  insns.rs  keywords.rs  lexer.rs  lib.rs  parser.rs  source.rs  symbols.rs
crates/nasmlint-core/src/rules/: flow.rs  instructions.rs  labels.rs  mod.rs  preprocessor.rs  sections.rs  style.rs
crates/nasmlint-lsp/: Cargo.toml
crates/nasmlint-lsp/src/: convert.rs  main.rs
tests/fixtures/: flow.asm  instructions.asm  structural.asm  trailing_ws.asm
