[workspace]
resolver = "2"
members = [
    "crates/nasmlint-core",
    "crates/nasmlint-cli",
    # "crates/nasmlint-lsp",  # enabled at M5
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Jedi Knights"]
repository = "https://github.com/jedi-knights/nasm-lint"
rust-version = "1.85"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
walkdir = "2"
globset = "0.4"
