[package]
name = "nasmlint-core"
description = "Analysis core for nasm-lint: lex, parse, resolve, CFG, rules, diagnostics"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
toml = { workspace = true }
