[package]
name = "nasmlint-lsp"
description = "Language server for nasm-lint — inline NASM diagnostics over LSP"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "nasmlint-lsp"
path = "src/main.rs"

[dependencies]
nasmlint-core = { path = "../nasmlint-core" }
tower-lsp = { workspace = true }
tokio = { workspace = true }
